name:                disim
version:             0.1.0.0
synopsis:            Discrete Simulation
description:         Execution engine for customizable and referentially
                     transparent non-IO discrete simulations.
homepage:            https://github.com/lovasko/disim
license:             OtherLicense
license-file:        LICENSE
author:              Daniel Lovasko <daniel.lovasko@gmail.com>
maintainer:          Daniel Lovasko <daniel.lovasko@gmail.com>
copyright:           2016-2017 Daniel Lovasko
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10

executable wembley
  hs-source-dirs:      src
  main-is:             Main.hs
  exposed-modules:     Simulation.Discrete
  other-modules:       Simulation.Discrete.Calendar
                     , Simulation.Discrete.Types
                     , Simulation.Discrete.World
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lovasko/disim
